fix layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@ textarea {
 
 section {
   margin: 2rem 0;
-  /*word-break: break-word;*/
+  word-break: break-word;
 }
 
 section h2 {
@@ -132,7 +132,7 @@ section h2 + p {
   opacity: .6;
 }
 
-@media (min-width: 840px) {
+@media (min-width: 56em) {
   .grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1.5fr;
@@ -209,7 +209,6 @@ section h2 + p {
 .result-preview {
   border: 1px solid rgba(0,0,0,0.15);
   margin-top: 1rem;
-  max-width: 700px;
 }
 
 .result-preview__header {
